--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,9 @@
   "author": "YoFoon",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.1.2",
     "cheerio": "^0.22.0",
+    "eventproxy": "^0.3.5",
     "koa": "^1.2.4",
     "koa-bodyparser": "^2.2.0",
     "koa-cors": "0.0.16",
@@ -20,7 +22,9 @@
     "koa-router": "^5.4.0",
     "koa-session-mongoose": "^1.0.0",
     "koa-static": "^2.0.0",
+    "lodash": "^4.16.6",
     "mongoose": "^4.6.5",
+    "q": "^1.4.1",
     "superagent": "^2.3.0"
   },
   "devDependencies": {
