--- a/web/package.json
+++ b/web/package.json
@@ -41,6 +41,7 @@
     "react-router": "^2.0.1",
     "reflux": "^0.4.0",
     "reflux-promise": "^1.0.4",
-    "reflux-state-mixin": "^0.7.0"
+    "reflux-state-mixin": "^0.7.0",
+    "superagent": "^2.3.0"
   }
 }
